--- a/index.html
+++ b/index.html
@@ -7,7 +7,11 @@
 </head>
 <body>
     <h1>Aula HTML</h1>
-    <p>Segunda aula sobre HTML.</p>
+    <p>Segunda aula sobre HTML.</p>         
+
+
+    <h2>Clique no fabio porchat pra aprender um pouco</h2>
+       <a href="https://pt.wikipedia.org/wiki/Fábio_Porchat" ><img src="img/fabio.jpg" alt="gato html"> /a>
     
 </body>
-</html>
+</html> <a href=""></a>
