--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 
     <h2>Clique no fabio porchat pra aprender um pouco</h2>
-       <a href="https://pt.wikipedia.org/wiki/Fábio_Porchat" ><img src="img/fabio.jpg" alt="gato html"> /a>
+       <a href="https://pt.wikipedia.org/wiki/Fábio_Porchat" ><img src="img/fabio.jpg" alt="gato html"> </a>
     
 </body>
 </html> <a href=""></a>
